--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,25 @@ nav {
   opacity: 100;
   transition: all 1s;
 }
-/* .balance {
+.balance {
+  grid-column: 1 / span 2;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  margin-bottom: 2rem;
 }
-
-.movements {
-} */
+.balance__label {
+  font-size: 2.2rem;
+  font-weight: 500;
+  margin-bottom: -0.2rem;
+}
+.balance__date {
+  font-size: 1.4rem;
+  color: #888;
+}
+.balance__value {
+  font-size: 4.5rem;
+  font-weight: 300;
+}
+/* .movements {
+}  */
