--- a/styles.css
+++ b/styles.css
@@ -89,5 +89,17 @@ nav {
   font-size: 4.5rem;
   font-weight: 300;
 }
-/* .movements {
-}  */
+
+.movements {
+  grid-row: 2 / span 3;
+  background-color: #fff;
+  border-radius: 1rem;
+  overflow: scroll;
+}
+
+.movements__row {
+  padding: 2.25rem 4rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+}
