--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,8 @@ nav {
   font-weight: 300;
 }
 
+/* //movements */
+
 .movements {
   grid-row: 2 / span 3;
   background-color: #fff;
@@ -129,4 +131,44 @@ nav {
 .movements__value {
   font-size: 1.7rem;
   margin-left: auto;
+}
+
+/* Summary Section */
+/* SUMMARY */
+.summary {
+  grid-row: 5 / 6;
+  display: flex;
+  align-items: baseline;
+  padding: 0 0.3rem;
+  margin-top: 1rem;
+}
+
+.summary__label {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-right: 0.8rem;
+}
+
+.summary__value {
+  font-size: 2.2rem;
+  margin-right: 2.5rem;
+}
+
+.summary__value--in,
+.summary__value--interest {
+  color: #66c873;
+}
+
+.summary__value--out {
+  color: #f5465d;
+}
+
+.btn--sort {
+  margin-left: auto;
+  border: none;
+  background: none;
+  font-size: 1.3rem;
+  font-weight: 500;
+  cursor: pointer;
 }
